--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 
 		<!-- Add Log4j2 Dependency -->
 		<dependency>
