--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 server.port=8116
-
+spring.application.name=otc-apm
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
