--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,13 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+<!-- 			<version>1.4.6.RELEASE</version> -->
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
 
 		<!-- Add Log4j2 Dependency -->
 		<dependency>
