--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,14 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-server.port=8116
+server.port=8316
 spring.application.name=otc-apm
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
+
+#开启健康检查（需要spring-boot-starter-actuator依赖）
+eureka.client.healthcheck.enabled = true
+#租期更新时间间隔（默认30秒）
+eureka.instance.lease-renewal-interval-in-seconds=2
+#租期到期时间（默认90秒）
+eureka.instance.lease-expiration-duration-in-seconds=4
